K8s/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-website
  annotations:
    kubernetes.io/ingress.class: "traefik"
#    certmanager.k8s.io/issuer: "letsencrypt-prod"
#    certmanager.k8s.io/acme-challenge-type: http01

spec:
 # tls:
 # - hosts:
    # Change this to your own hostname
 #   - k3s-cluster.eastus2.cloudapp.azure.com
 #   secretName: jenkins-website
  rules:
  # Change this to your own hostname
  - host: k3s-cluster.eastus2.cloudapp.azure.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: jenkins-service
            port:
              number: 8080
